# terminalfx

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  cli.md  configuration.md  keyboard.md
examples/configs/: bench-2fx.yaml  bench-960.yaml  default.yaml  live-camera.yaml
examples/configs/presets/: ascii_quantize.yaml
src/terminalfx/: __init__.py  cli.py
src/terminalfx/audio/: __init__.py  extract.py  features.py
src/terminalfx/config/: __init__.py  loader.py  schema.py
src/terminalfx/core/: __init__.py  errors.py  types.py
src/terminalfx/effects/: __init__.py  base.py  builtins.py  params.py  registry.py  stack.py
src/terminalfx/media/: __init__.py  frames.py
src/terminalfx/persistence/: __init__.py  presets.py
src/terminalfx/preview/: __init__.py  controller.py  messages.py  renderer.py  transport.py  window.py
src/terminalfx/render/: __init__.py  encoders.py  jobs.py  offline.py  pipeline.py  realtime.py
src/terminalfx/session/: __init__.py  commands.py  controller.py  model.py
src/terminalfx/sources/: __init__.py  base.py  camera.py  mock.py  registry.py  screen.py  video_file.py
src/terminalfx/tui/: __init__.py  app.py  bindings.py  (+4 more)
tests/: test_ascii_rendering.py  test_audio.py  test_cli.py  test_config.py  test_config_comprehensive.py  test_effects.py  test_effects_comprehensive.py  test_encoder.py  test_normalize.py  test_preview_transport.py  test_render.py  test_screen_parsers.py  test_session.py  test_session_comprehensive.py
tools/: bench_fps.py  preview_standalone.py
